--- a/client/src/app/todos/todo-list/todo-list.component.html
+++ b/client/src/app/todos/todo-list/todo-list.component.html
@@ -1,1 +1,60 @@
-<p>todo-list works!</p>
+
+<div fxLayout="row">
+  <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10">
+
+    <mat-card class="search-card">
+      <mat-card-title class="todo-list-owner">Todos</mat-card-title>
+      <mat-card-content fxLayout="column" >
+
+        <div fxLayout="row wrap" fxLayoutGap="10px">
+
+      <mat-form-field class="input-field">
+        <mat-label>Owner</mat-label>
+        <input matInput id="todo-owner-input" placeholder="Filter by Owner">
+        <!-- in the input above is where ngModel needs to be used for input control (I think)  -->
+        <mat-hint>Filtered on client</mat-hint>
+
+      </mat-form-field>
+
+      <mat-form-field class="input-field">
+        <mat-label>Category</mat-label>
+        <input matInput id="todo-category-input" placeholder="Filter by Category">
+        <!-- in the input above is where ngModel needs to be used for input control (I think)  -->
+        <mat-hint>Filtered on client</mat-hint>
+      </mat-form-field>
+
+      <mat-form-field class="input-field">
+        <mat-label>Limit</mat-label>
+        <input matInput id="todo-limit-input" type="number" placeholder="Filter by Limit">
+        <!-- add to input tag above to filter from server -->
+        <mat-hint>Filtered on server</mat-hint>
+      </mat-form-field>
+
+      <mat-form-field class="input-field">
+        <mat-label>Body</mat-label>
+        <input matInput id="todo-body-input"  placeholder="Filter by Body">
+        <!-- add to input tag above to filter from server -->
+        <mat-hint>Filtered on server</mat-hint>
+      </mat-form-field>
+
+
+
+
+
+
+  <!-- Maybe this should be a pop-up instead of just a text message? Not sure. -->
+  <ng-template #todosError>
+    <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10" class="todo-error">
+      <mat-error>
+        There was a problem loading the todos. Possibly the server is down or perhaps there are network
+        issues.
+      </mat-error>
+      <mat-error>
+        Please wait a bit and try again or start the server.
+      </mat-error>
+    </div>
+  </ng-template>
+
+</div>
+
+
