--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -18,7 +18,7 @@
 
       <mat-form-field class="input-field">
         <mat-label>Category</mat-label>
-        <input matInput id="todo-category-input" placeholder="Filter by Owner"
+        <input matInput id="todo-category-input" placeholder="Filter by Category"
             [(ngModel)]="todoCategory" (input)="getTodosFromServer()">
         <mat-hint>Filtered on client</mat-hint>
       </mat-form-field>
@@ -36,6 +36,15 @@
         <!-- add to input tag above to filter from server -->
         <mat-hint>Filtered on server</mat-hint>
       </mat-form-field>
+
+      <mat-form-field class="input-field">
+        <mat-label>Status</mat-label>
+        <input matInput id="todo-status-input" placeholder="Filter by Status"
+            [(ngModel)]="todoStatus" (input)="getTodosFromServer()">
+        <mat-hint>Filtered on client</mat-hint>
+      </mat-form-field>
+
+
 
 
       </div>
@@ -56,6 +65,7 @@
                     <h3 matLine class="todo-list-owner"> {{todo.owner}} </h3>
                     <p matLine class="todo-list-body"> {{todo.body}} </p>
                     <p matLine class="todo-list-category"> {{todo.category}} </p>
+                    <p matLine class="todo-list-status"> {{todo.status}} </p>
                   </a>
                 </mat-nav-list>
               </mat-card-content>
