--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -45,10 +45,13 @@
       </mat-form-field>
 
 
+
+
+
       <div fxLayout="row wrap" fxLayoutGap="10px">
-        <label>View type: </label>
+        <label>Sort By: </label>
         <mat-radio-group aria-label="Sort by" [(ngModel)]="sortBy" data-test="sortByRadio">
-          <mat-radio-button value="body" (value)="getTodosFromServer()">Body</mat-radio-button>
+          <mat-radio-button value="body" (input)="updateSort()" >Body</mat-radio-button>
           <mat-radio-button value="status">Status</mat-radio-button>
         </mat-radio-group>
       </div>
@@ -70,9 +73,9 @@
               <mat-card-content>
                 <mat-nav-list class="todo-nav-list">
                   <h3 mat-subheader>Todos</h3>
-                  <a mat-list-item *ngFor="let todo of this.filteredTodos" [routerLink]="['/todos', todo.owner]" class="todo-list-item">
+                  <a mat-list-item *ngFor="let todo of this.filteredTodos" [routerLink]="['/todos', todo.owner]" class="todo-list-item" >
                     <h3 matLine class="todo-list-owner"> {{todo.owner}} </h3>
-                    <p matLine class="todo-list-body"> {{todo.body}} </p>
+                    <p matLine class="todo-list-body" > {{todo.body}} </p>
                     <p matLine class="todo-list-category"> {{todo.category}} </p>
                     <p matLine class="todo-list-status"> {{todo.status}} </p>
                   </a>
