Add sort todos by owner
This adds the radio button for and ability to sort the todos by owner.  I kind of hate the code because it seems repetitive to me, but I am committing because it is passing the tests and that is a win.  this adds a function to the todo service that will sort the todos alphabetically by their owner, this function is then called by 'updateOwnerSort()` when the button is pushed.

--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -49,9 +49,10 @@
 
 
       <div fxLayout="row wrap" fxLayoutGap="10px">
-        <label>Sort By: </label>
+        <label>Sort By</label>
         <mat-radio-group aria-label="Sort by" [(ngModel)]="sortBy" data-test="sortByRadio">
-          <mat-radio-button value="body" (input)="updateSort()" >Body</mat-radio-button>
+          <mat-radio-button value="body" (input)="updateBodySort()" >Body</mat-radio-button>
+          <mat-radio-button value="owner" (input)="updateOwnerSort()" >Owner</mat-radio-button>
           <mat-radio-button value="status">Status</mat-radio-button>
         </mat-radio-group>
       </div>
