Sort todos by status
This adds another function for sorting todos, but this time it is by status.  This create two more functions.  a call the the `updateSortStatus()` is placed in the HTML and is called when the radio button is clicked.

--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -53,7 +53,7 @@
         <mat-radio-group aria-label="Sort by" [(ngModel)]="sortBy" data-test="sortByRadio">
           <mat-radio-button value="body" (input)="updateBodySort()" >Body</mat-radio-button>
           <mat-radio-button value="owner" (input)="updateOwnerSort()" >Owner</mat-radio-button>
-          <mat-radio-button value="status">Status</mat-radio-button>
+          <mat-radio-button value="status" (input)="updateStatusSort()" >Status</mat-radio-button>
         </mat-radio-group>
       </div>
 
