Add final todo sort
This adds the final sorting method.  I think they are ugly but I am tired and need to go to bed so I am committing here.  Right now there are two methods being used for each sort attribute and I would like to reduce that a bit.  That will be my goal for tommorw.  But for now they at least do a thing.

--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -32,8 +32,8 @@
 
       <mat-form-field class="input-field">
         <mat-label>Body</mat-label>
-        <input matInput id="todo-body-input"  placeholder="Filter by Body">
-        <!-- add to input tag above to filter from server -->
+        <input matInput id="todo-category-input" placeholder="Filter by Category"
+            [(ngModel)]="todoBody" (input)="getTodosFromServer()">
         <mat-hint>Filtered on server</mat-hint>
       </mat-form-field>
 
@@ -54,6 +54,7 @@
           <mat-radio-button value="body" (input)="updateBodySort()" >Body</mat-radio-button>
           <mat-radio-button value="owner" (input)="updateOwnerSort()" >Owner</mat-radio-button>
           <mat-radio-button value="status" (input)="updateStatusSort()" >Status</mat-radio-button>
+          <mat-radio-button value="category" (input)="updateCategorySort()" >Category</mat-radio-button>
         </mat-radio-group>
       </div>
 
