--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -1,92 +1,80 @@
-
 <div fxLayout="row">
   <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10">
 
     <mat-card class="search-card">
       <mat-card-title class="todo-list-title">Todos</mat-card-title>
-      <mat-card-content fxLayout="column" >
+      <mat-card-content fxLayout="column">
 
         <div fxLayout="row wrap" fxLayoutGap="10px">
 
-      <mat-form-field class="input-field">
-        <mat-label>Owner</mat-label>
-        <input matInput id="todo-owner-input" placeholder="Filter by Owner"
-            [(ngModel)]="todoOwner" (input)="getTodosFromServer()">
-        <mat-hint>Filtered on server</mat-hint>
+          <mat-form-field class="input-field">
+            <mat-label>Owner</mat-label>
+            <input matInput id="todo-owner-input" placeholder="Filter by Owner" [(ngModel)]="todoOwner"
+              (input)="getTodosFromServer()">
+            <mat-hint>Filtered on server</mat-hint>
 
-      </mat-form-field>
+          </mat-form-field>
 
-      <mat-form-field class="input-field">
-        <mat-label>Category</mat-label>
-        <input matInput id="todo-category-input" placeholder="Filter by Category"
-            [(ngModel)]="todoCategory" (input)="getTodosFromServer()">
-        <mat-hint>Filtered on client</mat-hint>
-      </mat-form-field>
+          <mat-form-field class="input-field">
+            <mat-label>Category</mat-label>
+            <input matInput id="todo-category-input" placeholder="Filter by Category" [(ngModel)]="todoCategory"
+              (input)="getTodosFromServer()">
+            <mat-hint>Filtered on client</mat-hint>
+          </mat-form-field>
 
-      <mat-form-field class="input-field">
-        <mat-label>Limit</mat-label>
-        <input matInput id="todo-limit-input" type="number" placeholder="Filter by Limit">
-        <!-- add to input tag above to filter from server -->
-        <mat-hint>Filtered on server</mat-hint>
-      </mat-form-field>
+          <mat-form-field class="input-field">
+            <mat-label>Limit</mat-label>
+            <input matInput id="todo-limit-input" type="number" placeholder="Filter by Limit">
+            <!-- add to input tag above to filter from server -->
+            <mat-hint>Filtered on server</mat-hint>
+          </mat-form-field>
 
-      <mat-form-field class="input-field">
-        <mat-label>Body</mat-label>
-        <input matInput id="todo-category-input" placeholder="Filter by Category"
-            [(ngModel)]="todoBody" (input)="getTodosFromServer()">
-        <mat-hint>Filtered on server</mat-hint>
-      </mat-form-field>
+          <mat-form-field class="input-field">
+            <mat-label>Body</mat-label>
+            <input matInput id="todo-category-input" placeholder="Filter by Category" [(ngModel)]="todoBody"
+              (input)="getTodosFromServer()">
+            <mat-hint>Filtered on server</mat-hint>
+          </mat-form-field>
 
-      <mat-form-field class="input-field">
-        <mat-label>Status</mat-label>
-        <input matInput id="todo-status-input" placeholder="Filter by Status"
-            [(ngModel)]="todoStatus" (input)="getTodosFromServer()">
-        <mat-hint>Filtered on client</mat-hint>
-      </mat-form-field>
+          <mat-form-field class="input-field">
+            <mat-label>Status</mat-label>
+            <input matInput id="todo-status-input" placeholder="Filter by Status" [(ngModel)]="todoStatus"
+              (input)="getTodosFromServer()">
+            <mat-hint>Filtered on client</mat-hint>
+          </mat-form-field>
 
-
-
-
-
-      <div fxLayout="row wrap" fxLayoutGap="10px">
-        <label>Sort By</label>
-        <mat-radio-group aria-label="Sort by" [(ngModel)]="sortBy" data-test="sortByRadio">
-          <mat-radio-button value="body" (input)="updateBodySort()" >Body</mat-radio-button>
-          <mat-radio-button value="owner" (input)="updateOwnerSort()" >Owner</mat-radio-button>
-          <mat-radio-button value="status" (input)="updateStatusSort()" >Status</mat-radio-button>
-          <mat-radio-button value="category" (input)="updateCategorySort()" >Category</mat-radio-button>
-        </mat-radio-group>
-      </div>
-
-
-
-
-
-      </div>
-
-      <div fxLayout="row">
-        <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10" *ngIf="serverFilteredTodos" >
-          <!-- Switch between card and list view based on the viewType variable, set above in the mar-radio-group -->
-          <div >
-
-
-            <!-- List view -->
-            <mat-card >
-              <mat-card-content>
-                <mat-nav-list class="todo-nav-list">
-                  <h3 mat-subheader>Todos</h3>
-                  <a mat-list-item *ngFor="let todo of this.filteredTodos" [routerLink]="['/todos', todo.owner]" class="todo-list-item" >
-                    <h3 matLine class="todo-list-owner"> {{todo.owner}} </h3>
-                    <p matLine class="todo-list-body" > {{todo.body}} </p>
-                    <p matLine class="todo-list-category"> {{todo.category}} </p>
-                    <p matLine class="todo-list-status"> {{todo.status}} </p>
-                  </a>
-                </mat-nav-list>
-              </mat-card-content>
-            </mat-card>
-
+          <div fxLayout="row wrap" fxLayoutGap="10px">
+            <label>Sort By</label>
+            <mat-radio-group aria-label="Sort by" [(ngModel)]="sortBy" data-test="sortByRadio">
+              <mat-radio-button value="body" (input)="updateSort($event.target.value)">Body</mat-radio-button>
+              <mat-radio-button value="owner" (input)="updateSort($event.target.value)">Owner</mat-radio-button>
+              <mat-radio-button value="status" (input)="updateSort($event.target.value)">Status</mat-radio-button>
+              <mat-radio-button value="category" (input)="updateSort($event.target.value)">Category</mat-radio-button>
+            </mat-radio-group>
           </div>
 
+        </div>
+        <div fxLayout="row">
+          <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10" *ngIf="serverFilteredTodos">
+            <!-- Switch between card and list view based on the viewType variable, set above in the mar-radio-group -->
+            <div>
+              <!-- List view -->
+              <mat-card>
+                <mat-card-content>
+                  <mat-nav-list class="todo-nav-list">
+                    <h3 mat-subheader>Todos</h3>
+                    <a mat-list-item *ngFor="let todo of this.filteredTodos" [routerLink]="['/todos', todo.owner]"
+                      class="todo-list-item">
+                      <h3 matLine class="todo-list-owner"> {{todo.owner}} </h3>
+                      <p matLine class="todo-list-body"> {{todo.body}} </p>
+                      <p matLine class="todo-list-category"> {{todo.category}} </p>
+                      <p matLine class="todo-list-status"> {{todo.status}} </p>
+                    </a>
+                  </mat-nav-list>
+                </mat-card-content>
+              </mat-card>
+
+            </div>
 
 
 
@@ -95,19 +83,23 @@
 
 
 
-  <!-- Maybe this should be a pop-up instead of just a text message? Not sure. -->
-  <ng-template #todosError>
-    <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10" class="todo-error">
-      <mat-error>
-        There was a problem loading the todos. Possibly the server is down or perhaps there are network
-        issues.
-      </mat-error>
-      <mat-error>
-        Please wait a bit and try again or start the server.
-      </mat-error>
-    </div>
-  </ng-template>
-
-</div>
 
 
+
+
+
+
+            <!-- Maybe this should be a pop-up instead of just a text message? Not sure. -->
+            <ng-template #todosError>
+              <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10" class="todo-error">
+                <mat-error>
+                  There was a problem loading the todos. Possibly the server is down or perhaps there are network
+                  issues.
+                </mat-error>
+                <mat-error>
+                  Please wait a bit and try again or start the server.
+                </mat-error>
+              </div>
+            </ng-template>
+
+          </div>
