Clean todo service
This cleans up the todo service and gets rid of the no longer needed functions.  This also changes a lint errors that was being brought up by the ESLINT.  (This was simply using an arrow function instead of the notation I was using)

--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -31,7 +31,7 @@
 
           <mat-form-field class="input-field">
             <mat-label>Body</mat-label>
-            <input matInput id="todo-category-input" placeholder="Filter by Category" [(ngModel)]="todoBody"
+            <input matInput id="todo-body-input" placeholder="Filter by Body" [(ngModel)]="todoBody"
               (input)="getTodosFromServer()">
             <mat-hint>Filtered on server</mat-hint>
           </mat-form-field>
