Add todo limit filter
This uses '.slice()` to slice the array of filtered todos. I added this to `filterTodos()` as the last parameter.  This allows the user to limit the number of todos they would like to see on the todos-view.

--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -24,8 +24,8 @@
 
           <mat-form-field class="input-field">
             <mat-label>Limit</mat-label>
-            <input matInput id="todo-limit-input" type="number" placeholder="Filter by Limit">
-            <!-- add to input tag above to filter from server -->
+            <input matInput id="todo-limit-input" placeholder="Filter by limit" [(ngModel)]="todoLimit"
+            (input)="getTodosFromServer()">
             <mat-hint>Filtered on server</mat-hint>
           </mat-form-field>
 
