--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -67,8 +67,7 @@
                 <mat-card-content>
                   <mat-nav-list class="todo-nav-list">
                     <h3 mat-subheader>Todos</h3>
-                    <a mat-list-item *ngFor="let todo of this.filteredTodos" [routerLink]="['/todos', todo.owner]"
-                      class="todo-list-item">
+                    <a mat-list-item *ngFor="let todo of this.filteredTodos" [routerLink]="['/todos', todo._id]"class="todo-list-item">
                       <h3 matLine class="todo-list-owner"> {{todo.owner}} </h3>
                       <p matLine class="todo-list-body"> {{todo.body}} </p>
                       <p matLine class="todo-list-category"> {{todo.category}} </p>
