--- a/client/src/app/todos/todo-details/todo-details.component.html
+++ b/client/src/app/todos/todo-details/todo-details.component.html
@@ -1,1 +1,14 @@
-<p>todo-details works!</p>
+<mat-card class="todo-card" *ngIf="this.todo">
+  <mat-card-header>
+    <mat-card-title class="user-card-name">{{ this.todo.owner }}</mat-card-title>
+    <mat-card-subtitle class="user-card-company">{{ this.todo.category }}</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <p><span class="user-card-age">{{ todo.body }}</span></p>
+    <p *ngIf="!this.todo.status" >This to-do has not been completed!</p>
+    <p *ngIf="this.todo.status" >This To-do has been completed!</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button data-test="viewProfileButton"  [routerLink]="'/todos'">Return To List</button>
+  </mat-card-actions>
+</mat-card>
