--- a/client/src/app/todos/todo-details/todo-details.component.html
+++ b/client/src/app/todos/todo-details/todo-details.component.html
@@ -4,11 +4,11 @@
     <mat-card-subtitle class="user-card-company">{{ this.todo.category }}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <p><span class="user-card-age">{{ todo.body }}</span></p>
-    <p *ngIf="!this.todo.status" >This to-do has not been completed!</p>
-    <p *ngIf="this.todo.status" >This To-do has been completed!</p>
+    <p><span class="todo-card-body">{{ todo.body }}</span></p>
+    <p *ngIf="!this.todo.status" class="todo-status-false" >This to-do has not been completed!</p>
+    <p *ngIf="this.todo.status" class="todo-status-true">This To-do has been completed!</p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button data-test="viewProfileButton"  [routerLink]="'/todos'">Return To List</button>
+    <button class="return-button" mat-button data-test="viewDetailButton"  [routerLink]="'/todos'">Return To List</button>
   </mat-card-actions>
 </mat-card>
