--- a/client/src/app/todos/todo-details/todo-details.component.html
+++ b/client/src/app/todos/todo-details/todo-details.component.html
@@ -1,7 +1,7 @@
 <mat-card class="todo-card" *ngIf="this.todo">
   <mat-card-header>
-    <mat-card-title class="user-card-name">{{ this.todo.owner }}</mat-card-title>
-    <mat-card-subtitle class="user-card-company">{{ this.todo.category }}</mat-card-subtitle>
+    <mat-card-title class="todo-card-owner">{{ this.todo.owner }}</mat-card-title>
+    <mat-card-subtitle class="todo-card-category">{{ this.todo.category }}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <p><span class="todo-card-body">{{ todo.body }}</span></p>
