--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -68,11 +68,12 @@
                   <mat-nav-list class="todo-nav-list">
                     <h3 mat-subheader>Todos</h3>
                     <a mat-list-item *ngFor="let todo of this.filteredTodos" [routerLink]="['/todos', todo._id]"class="todo-list-item">
-                      <h3 matLine class="todo-list-owner"> {{todo.owner}} </h3>
-                      <p matLine class="todo-list-body"> {{todo.body}} </p>
-                      <p matLine class="todo-list-category"> {{todo.category}} </p>
+                      <h3 matLine class="todo-list-owner">{{todo.owner}}</h3>
+                      <p matLine class="todo-list-body">{{todo.body}}</p>
+                      <p matLine class="todo-list-category">{{todo.category}}</p>
                       <p matLine class="todo-list-status-true" *ngIf="todo.status"> {{todo.status}} </p>
                       <p matLine class="todo-list-status-false" *ngIf="!todo.status"> {{todo.status}} </p>
+                      <button mat-button data-test="viewDetailButton" [routerLink]="['/todos', this.todo._id]">View Details</button>
                     </a>
                   </mat-nav-list>
                 </mat-card-content>
